# qa_guru_lecture_16

./: pyproject.toml
