[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "homework_16"
version = "1.0.0"
description = "This project install all requirements with poetry"
authors = ["Dmitriy Vasilyev <test@mail.com>"]
license = "MIT"
packages = [{ include = "homework_16" }]

[tool.poetry.dependencies]
python = "^3.9"
selene = "2.0.0rc2"
selenium = "4.4.3"
pytest = "^7.3.1"

[tool.poetry.group.dev.dependencies]
pylint = "*"